--- a/searchengine/pom.xml
+++ b/searchengine/pom.xml
@@ -75,5 +75,11 @@
 			<artifactId>jetty-servlet</artifactId>
 			<version>7.2.0.v20101020</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
 	</dependencies>
 </project>
